--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
-
-.DS_Store
+*.DS_Store
+.aliases_custom
+.adobe
+.android
+.bash_history
+.bash_profile_custom
+.cache
+.CFUserTextEncoding
+.ctrlp_cache/*
+.cups
+.deltafy
+.dvdcss
+.dropbox
+.eclipse
+.fseventsd
+.gdb_history
+.gem
+.gitk
+.heroku
+.idlerc
+.ipython
+.lesshst
+.MacOSX
+.mysql_history
+.netbeans
+.node_modules
+.npm
+.pearrc
+.putty
+.rvm
+.secrets
+.ssh
+.Spotlight-V100
+.subversion
+.TemporaryItems
+.Trash
+.Trashes
+.titanium
+.vimgolf
+.viminfo
+.vim-fuf-data
