--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,17 @@ Icon
 .Spotlight-V100
 .Trashes
 rcode/.Rhistory
+# History files
+.Rhistory
+
+# Example code in package build process
+*-Ex.R
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
