--- a/suda/DESCRIPTION
+++ b/suda/DESCRIPTION
@@ -6,5 +6,7 @@ Title: Security Using Data Analysis
 Author: Jay Jacobs <jay@beechplane.com>
 Maintainer: Jay Jacobs <jay@beechplane.com>
 Description: The packages provides support functions for the
-        book "Security using Data Analysis, Visualization and Dashboards"
+    book "Security using Data Analysis, Visualization and Dashboards"
 License: GPL
+Collate:
+    'suda.R'
