--- a/suda/DESCRIPTION
+++ b/suda/DESCRIPTION
@@ -8,5 +8,9 @@ Maintainer: Jay Jacobs <jay@beechplane.com>
 Description: The packages provides support functions for the
     book "Security using Data Analysis, Visualization and Dashboards"
 License: GPL
+Imports:
+    maps,
+    maptools
+digestCollate: 'suda.R'
 Collate:
     'suda.R'
